--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -1,9 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".admin.product.ProductActivity">
+    android:paddingRight="30dp"
+    android:paddingLeft="30dp"
+    android:paddingTop="20dp"
+    android:orientation="vertical"
+    tools:context=".ui.product.ProductActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/titleInformation"
+        android:layout_width="match_parent"
+        android:padding="30dp"
+        android:text="Brochetas"
+        android:fontFamily="@font/grotesk_medium"
+        android:textSize="30dp"
+        android:layout_height="wrap_content"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:padding="20dp"
+            android:paddingTop="30dp"
+            android:src="@drawable/ic_coffetime" />
+
+    </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="30dp"
+        android:layout_margin="20dp"
+        android:text="Lorem ipsum dolor sit amet,
+        consectetur adipiscing elit. Pellentesque
+        eleifend tincidunt in tellus lorem.
+        Vel sollicitudin commodo placerat
+        laoreet vestibulum."
+        android:textSize="18dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:textColor="#F43127"
+            android:fontFamily="@font/grotesk_medium"
+            android:text="S/18.07"
+            android:textSize="18dp"
+            android:layout_weight="1"
+            />
+        <ImageButton
+            android:layout_width="130dp"
+            android:layout_height="70dp"
+            android:padding="10dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_delete"
+            android:background="@null"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:fontFamily="@font/grotesk_medium"
+            android:text="3"
+            android:textSize="24dp"/>
+        <ImageButton
+            android:padding="10dp"
+            android:layout_width="130dp"
+            android:layout_height="70dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_add"
+            android:background="@null"
+            />
+    </LinearLayout>
+
+</LinearLayout>
