--- a/app/src/main/res/layout/product_element.xml
+++ b/app/src/main/res/layout/product_element.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:animateLayoutChanges="true"
     app:cardCornerRadius="20dp"
+    android:orientation="horizontal"
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true">
 
@@ -13,81 +14,70 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <RelativeLayout
+        <ImageView
+            android:id="@+id/iconImageView"
+            android:layout_width="180dp"
+            android:layout_margin="10dp"
+            android:layout_height="130dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_coffetime" />
+
+
+        <LinearLayout
+
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="6dp">
+            android:layout_weight="1"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/iconImageView"
-                android:layout_width="130dp"
-                android:layout_height="130dp"
-                android:layout_marginStart="18dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
-                app:srcCompat="@drawable/ic_coffetime" />
-
-
-            <LinearLayout
-
-                android:id="@+id/linearLayout"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/name_"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="24dp"
-                android:layout_marginLeft="4dp"
                 android:layout_marginTop="2dp"
-                android:layout_toEndOf="@+id/iconImageView"
-                android:layout_toRightOf="@+id/iconImageView"
-                android:orientation="vertical">
+                android:text="Codelia"
+                android:textColor="@android:color/black"
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/name_"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:text="Codelia"
-                    android:textColor="@android:color/black"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
+            <TextView
+                android:id="@+id/stock_"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:text="Francia"
+                android:textSize="19dp" />
 
-                <TextView
-                    android:id="@+id/stock_"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Francia"
-                    android:textSize="18sp" />
+            <TextView
+                android:id="@+id/category_"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:text="Francia"
+                android:textSize="19dp" />
 
-                <TextView
-                    android:id="@+id/category_"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Francia"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/price_"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Francia"
-                    android:textSize="18sp" />
+            <TextView
+                android:id="@+id/price_"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="3dp"
+                android:text="Francia"
+                android:textSize="19dp" />
 
 
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Agregar" />
-            </LinearLayout>
-
-
-        </RelativeLayout>
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_margin="3dp"
+                android:textAllCaps="false"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                android:text="Agregar" />
+        </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
