--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -54,43 +54,8 @@
         android:layout_marginTop="15dp"
         >
 
-        <Button
-            android:id="@+id/btnMenu3"
-            android:layout_width="77dp"
-            android:layout_height="match_parent"
-            android:backgroundTint="@color/menu1"
-            android:drawableTop="@drawable/ic_postre"
-            android:text="@string/txtMenu3"
-            android:textAlignment="center"
-            android:textColor="@color/fontTitle"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:textAllCaps="false"
-            android:layout_margin="2dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            app:cornerRadius="15dp"
-            />
 
-        <Button
-            android:id="@+id/btnMenu4"
-            android:layout_width="77dp"
-            android:layout_height="match_parent"
-            android:backgroundTint="@color/menu1"
-            android:drawableTop="@drawable/ic_flat"
-            android:text="@string/txtMenu4"
-            android:textAlignment="center"
-            android:textColor="@color/fontTitle"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:textAllCaps="false"
-            android:layout_margin="2dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            app:cornerRadius="15dp"
-            />
+
 
         <Button
             android:id="@+id/btnMenu2"
@@ -100,6 +65,7 @@
             android:layout_weight="1"
             android:backgroundTint="@color/menu1"
             android:drawableTop="@drawable/ic_burger"
+            android:onClick="ShowStarterPlate"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:text="@string/txtMenu2"
@@ -114,20 +80,59 @@
             android:id="@+id/btnMenu1"
             android:layout_width="77dp"
             android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
             android:backgroundTint="@color/menu1"
             android:drawableTop="@drawable/ic_breakfast"
+            android:onClick="ShowDish"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:text="@string/txtMenu1"
             android:textAlignment="center"
+            android:textAllCaps="false"
             android:textColor="@color/fontTitle"
             android:textSize="10sp"
             android:textStyle="bold"
-            android:layout_weight="1"
-            android:textAllCaps="false"
+            app:cornerRadius="15dp" />
+
+
+        <Button
+            android:id="@+id/btnMenu3"
+            android:layout_width="77dp"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="@color/menu1"
+            android:drawableTop="@drawable/ic_postre"
+            android:onClick="ShowDesserts"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            app:cornerRadius="15dp"
-            />
+            android:text="@string/txtMenu3"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@color/fontTitle"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            app:cornerRadius="15dp" />
+
+        <Button
+            android:id="@+id/btnMenu4"
+            android:layout_width="77dp"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:backgroundTint="@color/menu1"
+            android:drawableTop="@drawable/ic_flat"
+            android:onClick="ShowDrinks"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="@string/txtMenu4"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textColor="@color/fontTitle"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            app:cornerRadius="15dp" />
 
     </LinearLayout>
 
@@ -144,7 +149,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listProduct"
+        android:id="@+id/listProduct_"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
