--- a/app/src/main/res/layout/activity_user_admin.xml
+++ b/app/src/main/res/layout/activity_user_admin.xml
@@ -1,102 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".admin.user.UserAdminActivity">
+    android:paddingTop="20dp"
+    android:paddingRight="30dp"
+    android:paddingLeft="30dp"
+    tools:context=".admin.home.HomeAdminActivity"
+>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:padding="15dp"
+        android:text="Mantener Usuario"
+        android:textAlignment="center"
+        android:fontFamily="@font/grotesk_medium"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    />
 
-<?xml version="1.0" encoding="utf-8"?>
+    <EditText
+        android:id="@+id/txt_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:ems="10"
+        android:hint="Nombre"
+        android:inputType="textPersonName" />
 
+    <EditText
+        android:id="@+id/txt_apellido"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:ems="10"
+        android:hint="Apellido"
+        android:inputType="number" />
 
+    <EditText
+        android:id="@+id/txt_telefono"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:ems="10"
+        android:hint="Telefono"
+        android:inputType="number" />
 
+    <EditText
+        android:id="@+id/txt_FechaNacimiento"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:ems="10"
+        android:hint="Fecha de Nacimiento"
+        android:inputType="date" />
 
-
-
-
-
-
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cv"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:animateLayoutChanges="true"
-    app:cardCornerRadius="20dp"
-    android:orientation="horizontal"
-    app:cardElevation="4dp"
-    app:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:animateLayoutChanges="true"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/iconImageView"
-            android:layout_width="180dp"
-            android:layout_margin="10dp"
-            android:layout_height="130dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/ic_coffetime" />
-
-
-        <LinearLayout
-
-            android:id="@+id/linearLayout"
+        android:layout_marginTop="20dp">
+        <Button
+            android:id="@+id/btn_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="#FCB302"
+            android:onClick="Registrar"
+            android:text="Registrar"
+            android:padding="10dp"
+            android:layout_margin="8dp"
+            android:textColor="#0C1423"
+            android:textAllCaps="false"
+            android:textSize="16dp"
             android:layout_weight="1"
-            android:layout_margin="10dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/name_"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="2dp"
-                android:text="Codelia"
-                android:textColor="@android:color/black"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/stock_"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:text="Francia"
-                android:textSize="19dp" />
-
-            <TextView
-                android:id="@+id/category_"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:text="Francia"
-                android:textSize="19dp" />
-
-            <TextView
-                android:id="@+id/price_"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:text="Francia"
-                android:textSize="19dp" />
-
-
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_margin="3dp"
-                android:textAllCaps="false"
-                android:layout_gravity="center_horizontal"
-                android:layout_height="wrap_content"
-                android:text="Agregar" />
-        </LinearLayout>
+            app:cornerRadius="20dp" />
+        <Button
+            android:id="@+id/btn_save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FCB302"
+            android:onClick=""
+            android:text="Buscar"
+            android:padding="10dp"
+            android:layout_margin="8dp"
+            android:textColor="#0C1423"
+            android:textAllCaps="false"
+            android:textSize="16dp"
+            android:layout_weight="1"
+            app:cornerRadius="20dp" />
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/btn_save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FCB302"
+            android:onClick="Actualizar"
+            android:text="Actualizar"
+            android:layout_margin="8dp"
+            android:padding="10dp"
+            android:textColor="#0C1423"
+            android:textAllCaps="false"
+            android:textSize="16dp"
+            android:layout_weight="1"
+            app:cornerRadius="20dp" />
+        <Button
+            android:id="@+id/btn_save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FCB302"
+            android:onClick="saveProduct"
+            android:text="Eliminar"
+            android:padding="10dp"
+            android:layout_margin="8dp"
+            android:textColor="#0C1423"
+            android:textAllCaps="false"
+            android:textSize="16dp"
+            android:layout_weight="1"
+            app:cornerRadius="20dp" />
+    </LinearLayout>
+
+
+</LinearLayout>
