--- a/app/src/main/res/layout/product_cart_element.xml
+++ b/app/src/main/res/layout/product_cart_element.xml
@@ -16,6 +16,7 @@
         android:padding="10dp"
     >
         <ImageView
+            android:id="@+id/productImgCart"
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
@@ -31,15 +32,17 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <TextView
+                    android:id="@+id/productNameCart"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Ensalada"
-                    android:textAlignment="textStart"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
                     android:fontFamily="@font/grotesk_medium"
-                    android:textSize="20dp"/>
+                    android:text="Ensalada"
+                    android:textAlignment="textStart"
+                    android:textSize="20dp" />
                 <ImageButton
                     android:layout_width="50dp"
                     android:layout_gravity="center"
@@ -52,14 +55,14 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/productPriceCart"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:fontFamily="@font/grotesk_medium"
                 android:text="S/18.87"
                 android:textAlignment="textStart"
-                android:fontFamily="@font/grotesk_medium"
-                android:textSize="18dp"
-            />
+                android:textSize="18dp" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
