--- a/app/src/main/res/layout/activity_user_admin.xml
+++ b/app/src/main/res/layout/activity_user_admin.xml
@@ -18,14 +18,21 @@
         android:text="Mantener Usuario"
         android:textAlignment="center"
         android:fontFamily="@font/grotesk_medium"
-
     />
 
+    <EditText
+        android:id="@+id/txt_code"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:hint="Código"
+        android:inputType="textPersonName" />
     <EditText
         android:id="@+id/txt_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Nombre"
         android:inputType="textPersonName" />
@@ -34,7 +41,7 @@
         android:id="@+id/txt_apellido"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Apellido"
         android:inputType="number" />
@@ -43,7 +50,7 @@
         android:id="@+id/txt_telefono"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Telefono"
         android:inputType="number" />
@@ -52,7 +59,7 @@
         android:id="@+id/txt_FechaNacimiento"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Fecha de Nacimiento"
         android:inputType="date" />
@@ -63,7 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp">
         <Button
-            android:id="@+id/btn_save"
+            android:id="@+id/registerUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#FCB302"
@@ -77,7 +84,7 @@
             android:layout_weight="1"
             app:cornerRadius="20dp" />
         <Button
-            android:id="@+id/btn_save"
+            android:id="@+id/findUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#FCB302"
@@ -95,7 +102,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
-            android:id="@+id/btn_save"
+            android:id="@+id/updateUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#FCB302"
@@ -109,7 +116,7 @@
             android:layout_weight="1"
             app:cornerRadius="20dp" />
         <Button
-            android:id="@+id/btn_save"
+            android:id="@+id/deleteUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#FCB302"
