add signUp admin

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,22 +15,74 @@
         android:id="@+id/titleLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="20dp"
         android:text="@string/titleSignUp"
         android:textColor="@color/fontTitle"
         android:textSize="34dp"
         android:textStyle="bold" />
     <EditText
-        android:id="@+id/txtUser"
+        android:id="@+id/id_Name"
         android:layout_width="match_parent"
         android:paddingLeft="20dp"
         android:layout_height="50dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/input_style"
         android:ems="10"
         android:fontFamily="sans-serif-light"
-        android:hint="@string/txtUsuario"
+        android:hint="Nombres"
         android:inputType="textPersonName"
+
+        />
+    <EditText
+        android:id="@+id/id_lastName"
+        android:layout_width="match_parent"
+        android:paddingLeft="20dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/input_style"
+        android:ems="10"
+        android:fontFamily="sans-serif-light"
+        android:hint="Apellidos"
+        android:inputType="textPersonName"
+
+        />
+    <EditText
+        android:id="@+id/id_phone"
+        android:layout_width="match_parent"
+        android:paddingLeft="20dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/input_style"
+        android:ems="10"
+        android:fontFamily="sans-serif-light"
+        android:hint="Telefono"
+        android:inputType="number"
+
+        />
+    <EditText
+        android:id="@+id/id_dateBirth"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:paddingLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/input_style"
+        android:ems="10"
+        android:fontFamily="sans-serif-light"
+        android:hint="Fecha de Nacimiento"
+        android:inputType="date"
+
+        />
+    <EditText
+        android:id="@+id/txtUser"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:paddingLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/input_style"
+        android:ems="10"
+        android:fontFamily="sans-serif-light"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
 
         />
     <EditText
@@ -38,12 +90,12 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:paddingLeft="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/input_style"
         android:ems="10"
         android:fontFamily="sans-serif-light"
-        android:hint="@string/txtContraseña"
-        android:inputType="textPersonName"
+        android:hint="Password"
+        android:inputType="textPassword"
 
         />
 
