--- a/app/src/main/res/layout/activity_user_admin.xml
+++ b/app/src/main/res/layout/activity_user_admin.xml
@@ -8,7 +8,7 @@
     android:paddingTop="20dp"
     android:paddingRight="30dp"
     android:paddingLeft="30dp"
-    tools:context=".admin.home.HomeAdminActivity"
+    tools:context=".admin.user.UserAdminActivity"
 >
     <TextView
         android:layout_width="match_parent"
@@ -96,7 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#FCB302"
-            android:onClick=""
+            android:onClick="findUser"
             android:text="Buscar"
             android:padding="10dp"
             android:layout_margin="8dp"
