--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -96,6 +96,7 @@
         android:fontFamily="@font/grotesk_medium"
         android:hint="13-07-1999"
         android:textSize="18dp" />
+
     <Button
         android:id="@+id/btn_Start"
         android:layout_width="match_parent"
@@ -104,6 +105,7 @@
         android:layout_marginTop="70dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/btn_round"
+        android:onClick="upUser"
         android:text="Actualizar"
         android:textAllCaps="false"
         android:textColor="@color/fontPrimary"
