--- a/app/src/main/res/layout/activity_user_admin.xml
+++ b/app/src/main/res/layout/activity_user_admin.xml
@@ -77,20 +77,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp">
-        <Button
-            android:id="@+id/registerUser"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#FCB302"
-            android:onClick="Registrar"
-            android:text="Registrar"
-            android:padding="10dp"
-            android:layout_margin="8dp"
-            android:textColor="#0C1423"
-            android:textAllCaps="false"
-            android:textSize="16dp"
-            android:layout_weight="1"
-            app:cornerRadius="20dp" />
+
         <Button
             android:id="@+id/findUser"
             android:layout_width="match_parent"
@@ -114,7 +101,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#FCB302"
-            android:onClick="Actualizar"
+            android:onClick="modifyUser"
             android:text="Actualizar"
             android:layout_margin="8dp"
             android:padding="10dp"
@@ -128,7 +115,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#FCB302"
-            android:onClick="saveProduct"
+            android:onClick="deleteUser"
             android:text="Eliminar"
             android:padding="10dp"
             android:layout_margin="8dp"
