--- a/app/src/main/res/layout/activity_user_admin.xml
+++ b/app/src/main/res/layout/activity_user_admin.xml
@@ -21,13 +21,14 @@
     />
 
     <EditText
-        android:id="@+id/txt_code"
+        android:id="@+id/txt_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Código"
-        android:inputType="number" />
+        android:hint="Email"
+        android:inputType="text" />
+
     <EditText
         android:id="@+id/txt_name"
         android:layout_width="match_parent"
@@ -44,14 +45,6 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Apellido"
-        android:inputType="text" />
-    <EditText
-        android:id="@+id/txt_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:hint="email"
         android:inputType="text" />
 
     <EditText
