--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -146,6 +146,7 @@
         android:layout_marginTop="70dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/btn_round"
+        android:onClick="payCart"
         android:text="@string/btnPagar"
         android:textAllCaps="false"
         android:textColor="@color/fontPrimary"
