--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -57,7 +57,7 @@
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:hint="Telefono"
-        android:inputType="number"
+        android:inputType="none"
 
         />
     <EditText
