--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -10,7 +10,7 @@
     android:paddingTop="40dp"
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
-    tools:context=".ui.pay.payActivity">
+    tools:context=".ui.pay.PayActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
