--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -22,7 +22,7 @@
         />
 
     <TextView
-        android:id="@+id/txtTitle"
+        android:id="@+id/tv_welcomeUser"
         android:layout_width="match_parent"
         android:layout_height="29dp"
         android:layout_marginTop="96dp"
@@ -34,7 +34,7 @@
         />
 
     <TextView
-        android:id="@+id/txtParagraph"
+        android:id="@+id/txt_"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
