--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -15,6 +15,9 @@
         android:id="@+id/menu_profile"
         android:title="@string/menu_profile"/>
     <item
+        android:id="@+id/menu_QR"
+        android:title="@string/menu_QR"/>
+    <item
         android:id="@+id/menu_logout"
         android:title="@string/menu_logout"/>
 </menu>
