--- a/app/src/main/res/layout/activity_user_qr_activity.xml
+++ b/app/src/main/res/layout/activity_user_qr_activity.xml
@@ -34,6 +34,7 @@
                 android:layout_height="70dp"
                 android:layout_gravity="center_horizontal"/>
             <TextView
+                android:id="@+id/txtNameQr_"
                 android:layout_width="match_parent"
                 android:text="Marco Max Atencio Maravi"
                 android:gravity="center"
