--- a/app/src/main/res/layout/activity_user_admin.xml
+++ b/app/src/main/res/layout/activity_user_admin.xml
@@ -5,11 +5,12 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_color"
     android:paddingTop="20dp"
     android:paddingRight="30dp"
     android:paddingLeft="30dp"
-    tools:context=".admin.user.UserAdminActivity"
->
+    tools:context=".admin.user.UserAdminActivity" >
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,8 +18,7 @@
         android:padding="15dp"
         android:text="Mantener Usuario"
         android:textAlignment="center"
-        android:fontFamily="@font/grotesk_medium"
-    />
+        android:fontFamily="@font/grotesk_medium" />
 
     <EditText
         android:id="@+id/txt_email"
