--- a/app/src/main/res/layout/activity_product_admin.xml
+++ b/app/src/main/res/layout/activity_product_admin.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_color"
     android:paddingTop="20dp"
     android:paddingRight="30dp"
     android:paddingLeft="30dp"
