--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,9 +7,7 @@
     tools:context=".auth.SignUpActivity"
     android:background="@drawable/bg_color"
     android:orientation="vertical"
-    android:padding="30dp"
-    >
-
+    android:padding="30dp" >
 
     <TextView
         android:id="@+id/titleLogin"
