--- a/app/src/main/res/layout/activity_user_qr_activity.xml
+++ b/app/src/main/res/layout/activity_user_qr_activity.xml
@@ -4,12 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_color"
     android:paddingRight="20dp"
     android:paddingLeft="20dp"
-
     tools:context=".ui.UserQR.UserQRActivity">
-
-
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -59,4 +57,5 @@
                 />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
 </LinearLayout>
