--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -9,9 +9,7 @@
     tools:context=".ui.WelcomeActivity"
     android:paddingLeft="30dp"
     android:paddingTop="20dp"
-    android:paddingRight="30dp"
-
-    >
+    android:paddingRight="30dp" >
 
     <ImageView
         android:id="@+id/imageView3"
